2009-02-12  Lars Hartmann  <lars (at) chaotika (dot) org>

	* .gitignore: added all the autotools generated stuff plus the
	stuff that gets produced during compile-time.


2009-02-09  Lars Hartmann  <lars (at) chaotika (dot) org>

	* include/liblpatom.h: renamed to atom.h
	* include/liblpcommon.h: renamed to common.h
	* include/liblputil.h: renamed to util.h
	* include/liblpxpak.h: renamed to xpak.h


2009-02-08  Lars Hartmann  <lars (at) chaotika (dot) org>

	* TODO: updated.

	Migrating tests to Autotools:
	* t/: cleaned up.
	* Makefile.am (SUBDIRS): added t/.
	* configure.ac (AC_CONFIG_FILES): added t/Makefile.
	* t/01_lpatom_parse.c: modified to fit new filenames and to be silent.
	* t/02_lpxpak_parse.c: modified to fit new filenames and to be silent.
	* t/Makefile.am: added.

	Migration to Autotools:
	* include/liblpcommon.h: added header for (BEGIN|END)_C_DECLS
	definitions.
	* include/liblpatom.h: added (BEGIN|END)_C_DECLS macros.
	* include/liblputil.h: added (BEGIN|END)_C_DECLS macros.
	* include/liblpxpak.h: added (BEGIN|END)_C_DECLS macros.
	* lib/liblpatom.c: added (BEGIN|END)_C_DECLS macros.
	added tests for autoconf Defines.
	* lib/liblputil.c: added (BEGIN|END)_C_DECLS macros.
	added tests for autoconf Defines.
	* lib/liblpxpak.c: added (BEGIN|END)_C_DECLS macros.
	added tests for autoconf Defines.
	* lib/: renamed to src/.
 	* COPYING: added.
	* Makefile.am: added.
	* configure.ac: added.
	* include/Makefile.am: added.
	* src/Makefile.am: added.
	* Makefile: removed.
	* src/Makefile: removed.

2009-02-05  Lars Hartmann  <lars (at) chaotika (dot) org>

	Added new test-framework:
	* t/Makefile: updated to match new test framework.
	* t/test.sh: added.
	* t/lpxpak/Makefile: added.
	* t/lpatom/Makefile: added.
	* t/atom_test.c: moved to t/lpatom/atom_parse.test.c
	* t/atom_positive.txt: moved to t/lpatom/atom_positive.txt
	* t/xpak_test.c: moved to t/lpxpak/xpak_parse.test.c
	* t/xpak_test.tbz2: moved to t/lpxpak/xpak_parse.test.tbz2
